# cloudflare-bridge

./: Cargo.toml  Dockerfile
.github/workflows/: release.yaml
src/: main.rs  settings_reader.rs  utils.rs
src/app/: app_ctx.rs
src/cloud_flare_api/: contracts.rs  dns_records.rs  mod.rs
src/cloud_flare_api/dns_records/: delete.rs
src/flows/: get_internet_ip.rs  mod.rs
src/http/: builder.rs  start_up.rs
src/http/controllers/dns/: create_a_record_action.rs  delete_record_action.rs  get_internet_ip.rs  get_list_action.rs  mod.rs
